更新血条会展示伤害吸收数值，修复某些情况下连续攻击会丢失 bar 的问题